--- a/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
+++ b/Code/ShipWorks.Shipping.UI/ShipWorks.Shipping.UI.csproj
@@ -203,6 +203,7 @@
       <DependentUpon>AmazonSWAAuthorizationControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Carriers\Amazon\SWA\AmazonSWAAuthorizationViewModel.cs" />
+    <Compile Include="Carriers\Amazon\SWA\IAmazonSWAAuthorizationViewModel.cs" />
     <Compile Include="Carriers\Asendia\AsendiaServiceControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -521,6 +522,10 @@
     <ProjectReference Include="..\ShipWorks.Data.Model\ShipWorks.Data.Model.csproj">
       <Project>{6f05267c-1883-4526-8d83-e46b7b2d2faf}</Project>
       <Name>ShipWorks.Data.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ShipWorks.Products.UI\ShipWorks.Products.UI.csproj">
+      <Project>{08D0CFD7-59DF-4E3D-AC43-0B44423C1DD9}</Project>
+      <Name>ShipWorks.Products.UI</Name>
     </ProjectReference>
     <ProjectReference Include="..\ShipWorks.Res\ShipWorks.Res.csproj">
       <Project>{3451502d-c78c-44ec-86ac-8f50a6531f5c}</Project>
