--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Carriers\Amazon\SWA\AmazonSWAShipmentRequestFactory.cs" />
     <Compile Include="Carriers\Amazon\SWA\AmazonSWAShipmentServicesBuilder.cs" />
     <Compile Include="Carriers\Amazon\SWA\AmazonSWAShippingProfileApplicationStrategy.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWARatingService.cs" />
     <Compile Include="Carriers\Asendia\AsendiaAccountRepository.cs" />
     <Compile Include="Carriers\Asendia\AsendiaDownloadedLabelData.cs" />
     <Compile Include="Carriers\Asendia\AsendiaException.cs" />
