--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -240,6 +240,9 @@
       <DependentUpon>EndiciaReferenceControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Reference\EndiciaReferenceViewModel.cs" />
+    <Compile Include="Controls\ShipmentDetails\AmazonSWAShipmentDetailsControl.xaml.cs">
+      <DependentUpon>AmazonSWAShipmentDetailsControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ShipmentDetails\AmazonSFPShipmentDetailsControl.xaml.cs">
       <DependentUpon>AmazonSFPShipmentDetailsControl.xaml</DependentUpon>
     </Compile>
@@ -509,6 +512,10 @@
     <Page Include="Controls\Reference\UpsReferenceControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\ShipmentDetails\AmazonSWAShipmentDetailsControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\ShipmentDetails\AmazonSFPShipmentDetailsControl.xaml">
       <SubType>Designer</SubType>
