--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -240,6 +240,7 @@
       <DependentUpon>EndiciaReferenceControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Reference\EndiciaReferenceViewModel.cs" />
+    <Compile Include="Controls\ShipmentDetails\AmazonSWAShipmentDetailsViewModel.cs" />
     <Compile Include="Controls\ShipmentDetails\AmazonSWAShipmentDetailsControl.xaml.cs">
       <DependentUpon>AmazonSWAShipmentDetailsControl.xaml</DependentUpon>
     </Compile>
