TP#30935: Show full date on successful update notification instead of 'Today'

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -754,6 +754,7 @@
     <Compile Include="ApplicationCore\Dashboard\Content\ShipWorksOnlineVersion.cs" />
     <Compile Include="ApplicationCore\Dashboard\DashboardManagerWrapper.cs" />
     <Compile Include="ApplicationCore\Dashboard\IDashboardManager.cs" />
+    <Compile Include="ApplicationCore\Dashboard\DashboardLocalMessageDetails.cs" />
     <Compile Include="ApplicationCore\DataPathWrapper.cs" />
     <Compile Include="ApplicationCore\DockPanelIdentifiers.cs" />
     <Compile Include="ApplicationCore\Enums\HeartbeatOptions.cs" />
