implement order lookup for swa

--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Carriers\Amazon\SFP\IAmazonSFPSameDayNotAvailableFootnoteViewModel.cs" />
     <Compile Include="Carriers\Amazon\SFP\IAmazonSFPServiceTypeRepository.cs" />
     <Compile Include="Carriers\Amazon\SFP\RateGroupFilters\AmazonSFPAvailableServiceTypeRateGroupFilter.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSFPRateHashingService.cs" />
     <Compile Include="Carriers\Amazon\SWA\AmazonSWAShipmentType.cs" />
     <Compile Include="Carriers\Amazon\SWA\AmazonSWAPackageAdapter.cs" />
     <Compile Include="Carriers\Amazon\SWA\AmazonSWAAccountDescription.cs" />
