ignoring reports folder

--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,5 @@ ShipWorks.sln.vsext.disable
 **/*.Specs/**/*.feature.cs
 results/
 launchSettings.json
+Code/ShipWorks.Ranorex.Tests/SmokeTest/SmokeTest/Reports/
+Code/ShipWorks.Ranorex.Tests/WebAutomation/OrderCreation/OrderCreation/Reports/
