TP #29830 Replace LogMeIn with Splashtop Remote Assistance
- Support is now using Splashtop for remote assistance. This changes
  the Help -> Enter Pin button to Help -> Generate Pin, and now
  downloads and runs the Splashtop SOS application instead of the
  LogMeIn application used previously.

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -764,6 +764,7 @@
     <Compile Include="ApplicationCore\Factory.cs" />
     <Compile Include="ApplicationCore\Heartbeat.cs" />
     <Compile Include="ApplicationCore\HeartbeatPace.cs" />
+    <Compile Include="ApplicationCore\Help\RemoteAssistance.cs" />
     <Compile Include="ApplicationCore\Help\IAboutShipWorksDialog.cs" />
     <Compile Include="ApplicationCore\ICheckForChangesNeeded.cs" />
     <Compile Include="ApplicationCore\IDataPath.cs" />
@@ -2400,12 +2401,6 @@
     </Compile>
     <Compile Include="ApplicationCore\Setup\ShipWorksSetupManager.cs" />
     <Compile Include="ApplicationCore\ShipWorksCommandLine.cs" />
-    <Compile Include="ApplicationCore\Help\RemoteAssistanceDlg.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ApplicationCore\Help\RemoteAssistanceDlg.Designer.cs">
-      <DependentUpon>RemoteAssistanceDlg.cs</DependentUpon>
-    </Compile>
     <Compile Include="ApplicationCore\Services\Hosting\Windows\WindowsServiceCredentialsDlg.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -9186,9 +9181,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Actions\Tasks\Common\Editors\SetOrderStatusTaskEditor.resx">
       <DependentUpon>SetOrderStatusTaskEditor.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ApplicationCore\Help\RemoteAssistanceDlg.resx">
-      <DependentUpon>RemoteAssistanceDlg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Data\Grid\Columns\DisplayTypes\Decorators\Editors\GridColumnDecoratorEditor.resx">
       <DependentUpon>GridColumnDecoratorEditor.cs</DependentUpon>
