--- a/Code/ShipWorks.UI/ShipWorks.UI.csproj
+++ b/Code/ShipWorks.UI/ShipWorks.UI.csproj
@@ -211,6 +211,14 @@
     <Compile Include="Controls\MainGrid\MainGridHeader.xaml.cs">
       <DependentUpon>MainGridHeader.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Settings\DesignModeWarehouseListViewModel.cs" />
+    <Compile Include="Controls\Settings\DesignModeWarehouseSettingsViewModel.cs" />
+    <Compile Include="Controls\Settings\WarehouseListDialog.xaml.cs">
+      <DependentUpon>WarehouseListDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Settings\WarehouseSettings.xaml.cs">
+      <DependentUpon>WarehouseSettings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\TokenTextBox.cs" />
     <Compile Include="Controls\UnitTextBox.cs" />
     <Compile Include="Controls\WebBrowser\DismissableWebBrowserDlg.xaml.cs">
@@ -390,6 +398,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\MainGrid\MainGridHeader.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\Settings\WarehouseListDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\Settings\WarehouseSettings.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -598,6 +614,7 @@
   <ItemGroup>
     <Resource Include="Resources\disk_blue1.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
