--- a/Code/ShipWorks.Products.Tests.Integration/ShipWorks.Products.Tests.Integration.csproj
+++ b/Code/ShipWorks.Products.Tests.Integration/ShipWorks.Products.Tests.Integration.csproj
@@ -60,7 +60,7 @@
     <PackageReference Include="MvvmLightLibs" Version="5.3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Rebex.Mail" Version="2.0.6755" />
-    <PackageReference Include="RestSharpSigned" Version="105.2.3" />
+    <PackageReference Include="RestSharp" Version="106.6.9" />
     <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.1.2" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="6.8.1.4648" />
     <PackageReference Include="SQL.LocalDB.Test" Version="1.1.2" />
