--- a/Code/ShipWorks.Products.UI/app.config
+++ b/Code/ShipWorks.Products.UI/app.config
@@ -30,6 +30,10 @@
         <assemblyIdentity name="SD.Tools.Algorithmia" publicKeyToken="8ede9265bbb8e107" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="RestSharp" publicKeyToken="598062e77f915f75" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-106.6.9.0" newVersion="106.6.9.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
