--- a/Code/ShipWorks.Shipping/app.config
+++ b/Code/ShipWorks.Shipping/app.config
@@ -66,6 +66,10 @@
         <assemblyIdentity name="System.Reactive.Core" publicKeyToken="94bc3704cddfc263" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.3000.0" newVersion="3.0.3000.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="RestSharp" publicKeyToken="598062e77f915f75" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-106.6.9.0" newVersion="106.6.9.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
