--- a/Code/ShipWorks.Stores.Tests/ShipWorks.Stores.Tests.csproj
+++ b/Code/ShipWorks.Stores.Tests/ShipWorks.Stores.Tests.csproj
@@ -96,7 +96,7 @@
     <PackageReference Include="MvvmLightLibs" Version="5.3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Rebex.Mail" Version="2.0.6755" />
-    <PackageReference Include="RestSharpSigned" Version="105.2.3" />
+    <PackageReference Include="RestSharp" Version="106.6.9" />
     <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.1.2" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="6.8.1.4648" />
     <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
