--- a/Code/ShipWorks.Stores.UI/packages.config
+++ b/Code/ShipWorks.Stores.UI/packages.config
@@ -9,7 +9,7 @@
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="1.1.0" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
-  <package id="RestSharpSigned" version="105.2.3" targetFramework="net46" />
+  <package id="RestSharp" version="106.6.9" targetFramework="net46" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.1.2" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="6.8.1.4648" targetFramework="net46" developmentDependency="true" />
   <package id="Syncfusion.Shared.WPF46" version="15.4.0.17" targetFramework="net46" />
