--- a/Code/ShipWorks.Stores/packages.config
+++ b/Code/ShipWorks.Stores/packages.config
@@ -18,7 +18,7 @@
   <package id="Rebex.Ftp" version="4.0.6755" targetFramework="net46" />
   <package id="Rebex.Mail" version="2.0.6755" targetFramework="net46" />
   <package id="Rebex.Networking" version="3.5.6755" targetFramework="net46" />
-  <package id="RestSharpSigned" version="105.2.3" targetFramework="net46" />
+  <package id="RestSharp" version="106.6.9" targetFramework="net46" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.1.2" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="6.8.1.4648" targetFramework="net46" developmentDependency="true" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net46" />
