--- a/Code/ShipWorks.Ranorex.Tests/WebAutomation/WarehouseAutomation/XunitSpecflow/packages.config
+++ b/Code/ShipWorks.Ranorex.Tests/WebAutomation/WarehouseAutomation/XunitSpecflow/packages.config
@@ -4,9 +4,11 @@
   <package id="Gherkin" version="6.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="RestSharp" version="106.6.9" targetFramework="net461" />
-  <package id="Selenium.Firefox.WebDriver" version="0.23.0" targetFramework="net461" />
+  <package id="Selenium.Chrome.WebDriver" version="74.0.0" targetFramework="net461" />
+  <package id="Selenium.Firefox.WebDriver" version="0.24.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
-  <package id="Selenium.WebDriver.MicrosoftDriver" version="17.17134.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.MicrosoftWebDriver" version="10.0.17134" targetFramework="net461" />
   <package id="SpecFlow" version="2.4.1" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
