Get entity, filter, and template image names by default so that GDI object count could be reduced in WPF by caching the image based on the name

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -7037,6 +7037,7 @@
     <Compile Include="Data\Administration\DetailedDatabaseSetupWizard.Designer.cs">
       <DependentUpon>DetailedDatabaseSetupWizard.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Utility\ResourcesUtility.cs" />
     <Compile Include="UI\ValueConverters\ShipmentDateCutoffConverter.cs" />
     <Compile Include="Users\Audit\AuditDisplayFormatAttribute.cs" />
     <Compile Include="Users\Audit\AuditMissingObjectLabelException.cs" />
