TP#30689: Update warehouse DTOs to match StoreConnectors DTO's

--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -895,7 +895,7 @@
     <Compile Include="Services\StoreManagerWrapper.cs" />
     <Compile Include="Services\StoreTypeManagerWrapper.cs" />
     <Compile Include="StoreSettingsTrackedDurationEvent.cs" />
-    <Compile Include="Warehouse\StoreData\AmazonStoreData.cs" />
+    <Compile Include="Warehouse\StoreData\AmazonStore.cs" />
     <Compile Include="Warehouse\StoreData\ChannelAdvisorStoreData.cs" />
     <Compile Include="Warehouse\StoreDtoFactory.cs" />
     <Compile Include="Warehouse\WarehouseStoreClient.cs" />
