--- a/Code/ShipWorks.UI.Tests/App.config
+++ b/Code/ShipWorks.UI.Tests/App.config
@@ -70,6 +70,10 @@
         <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-16.3460.0.29" newVersion="16.3460.0.29" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" /></startup></configuration>
