--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1159,6 +1159,7 @@
     <Compile Include="Shipping\ShipSense\NullKnowledgebase.cs" />
     <Compile Include="Shipping\ShipSense\NullShipSenseSynchronizer.cs" />
     <Compile Include="Shipping\ShipSense\Population\NullShipSenseLoaderGateway.cs" />
+    <Compile Include="Stores\Management\GenerateDataKeyResponse.cs" />
     <Compile Include="Stores\Management\IWarehouseStoreClient.cs" />
     <Compile Include="Stores\Orders\Archive\IOrderArchiver.cs" />
     <Compile Include="Common\IO\KeyboardShortcuts\ShortcutSession.cs" />
