TP#30690: WIP: Create WarehouseDownloader, WarehouseOrderClient, WarehouseOrderLoader, WarehouseOrderItemLoader and Warehouse order DTOs. Add method DownloadWarehouseOrders to DownloadManager. Add Orders endpoint to WarehouseEndpoints.

--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -901,6 +901,8 @@
     <Compile Include="Warehouse\StoreData\AmazonStore.cs" />
     <Compile Include="Warehouse\StoreData\ChannelAdvisorStoreData.cs" />
     <Compile Include="Warehouse\StoreDtoFactory.cs" />
+    <Compile Include="Warehouse\WarehouseDownloader.cs" />
+    <Compile Include="Warehouse\WarehouseOrderClient.cs" />
     <Compile Include="Warehouse\WarehouseStoreClient.cs" />
   </ItemGroup>
   <ItemGroup>
