--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1351,7 +1351,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Properties\XamlNamespaces.cs" />
+    <Compile Include="Properties\XamlNamespaces.cs" />    
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrder.cs" />    
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderCharge.cs" />    
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderItem.cs" />    
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderItemAttribute.cs" />    
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderPaymentDetail.cs" />    
+    <Compile Include="Warehouse\DTO\Orders\WarehouseOrderNote.cs" />
+    <Compile Include="Warehouse\IWarehouseDownloader.cs" />
+    <Compile Include="Warehouse\IWarehouseOrderClient.cs" />
+    <Compile Include="Warehouse\IWarehouseOrderItemLoader.cs" />
+    <Compile Include="Warehouse\IWarehouseOrderLoader.cs" />
+    <Compile Include="Warehouse\WarehouseOrderItemLoader.cs" />
+    <Compile Include="Warehouse\WarehouseOrderLoader.cs" />
     <Compile Include="Warehouse\WarehouseStoreTypes.cs" />
     <EmbeddedResource Include="ApplicationCore\MessageBoxes\ListSeparatorFormatRequiredDlg.resx">
       <DependentUpon>ListSeparatorFormatRequiredDlg.cs</DependentUpon>
